5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1709_3060.log
== TEST (2019-05-02 11:08:00) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = input("rodada: ")

if(d1 + d2 == 12):
	a = "CONSTRICAO"
elif(d1 + d2 < 5):
	a = "POLEN"
else:
	a = "FRAQUEZA"
print(a)

-- OUTPUT:
FRAQUEZA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:08:24) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = input("rodada: ")

if(d1 + d2 == 12):
	a = "CONSTRICAO"
elif(d1 + d2 < 5):
	a = "POLEN"
else:
	a = "FRAQUEZA"
print(a)

-- OUTPUT:
FRAQUEZA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:26) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = input("rodada: ")

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
elif(d1 + d2 < 5):
	a = "POLEN"
else:
	a = "FRAQUEZA"
print(a)
	if(a == "CONSTRICAO"):
		dano = d1 + d2 + 1
	elif(a == "POLEN"):
		dano = (d1 + d2 + 1)*r
	elif(a == "FRAQUEZA"):
		dano = d1 * d2
	print(dano)







-- ERROR:
File "XXXX", line 14
    if(a == "CONSTRICAO"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:48) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = input("rodada: ")

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
elif(d1 + d2 < 5):
	a = "POLEN"
else:
	a = "FRAQUEZA"
print(a)
	if(a == "CONSTRICAO"):
		dano = d1 + d2 + 1
	elif(a == "POLEN"):
		dano = (d1 + d2 + 1)*r
	elif(a == "FRAQUEZA"):
		dano = d1 * d2
	print(dano)







-- ERROR:
File "XXXX", line 14
    if(a == "CONSTRICAO"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:10) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = input("rodada: ")

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
	dano = d1 + d2 + 1
elif(d1 + d2 < 5):
	a = "POLEN"
	dano = (d1 + d2 + 1) * r
else:
	a = "FRAQUEZA"
	dano = d1 * d2
print(a)
	#if(a == "CONSTRICAO"):
		#dano = d1 + d2 + 1
	#elif(a == "POLEN"):
	#	dano = (d1 + d2 + 1)*r
	#elif(a == "FRAQUEZA"):
		#dano = d1 * d2
print(dano)







-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:24) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = input("rodada: ")

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
	dano = d1 + d2 + 1
elif(d1 + d2 < 5):
	a = "POLEN"
	dano = (d1 + d2 + 1) * r
else:
	a = "FRAQUEZA"
	dano = d1 * d2
print(a)
	#if(a == "CONSTRICAO"):
		#dano = d1 + d2 + 1
	#elif(a == "POLEN"):
	#	dano = (d1 + d2 + 1)*r
	#elif(a == "FRAQUEZA"):
		#dano = d1 * d2
print(dano)







-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:37) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = input("rodada: ")

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
	dano = d1 + d2 + 1
elif(d1 + d2 < 5):
	a = "POLEN"
	dano = (d1 + d2 + 1) * r
else:
	a = "FRAQUEZA"
	dano = d1 * d2
print(a)
	#if(a == "CONSTRICAO"):
		#dano = d1 + d2 + 1
	#elif(a == "POLEN"):
	#	dano = (d1 + d2 + 1)*r
	#elif(a == "FRAQUEZA"):
		#dano = d1 * d2
print(dano)







-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:51) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = input("rodada: ")

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
	dano = d1 + d2 + 1
elif(d1 + d2 < 5):
	a = "POLEN"
	dano = (d1 + d2 + 1) * r
else:
	a = "FRAQUEZA"
	dano = d1 * d2
print(a)
	#if(a == "CONSTRICAO"):
		#dano = d1 + d2 + 1
	#elif(a == "POLEN"):
	#	dano = (d1 + d2 + 1)*r
	#elif(a == "FRAQUEZA"):
		#dano = d1 * d2
print(dano)







-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:20:53) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = input("rodada: ")

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
	print(a)
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
	dano = d1 + d2 + 1
	print(a)
	print(dano)
elif(d1 + d2 < 5):
	a = "POLEN"
	dano = (d1 + d2 + 1) * r
	print(a)
	print(dano)
else:
	a = "FRAQUEZA"
	dano = d1 * d2
	print(a)
	print(dano)
	#if(a == "CONSTRICAO"):
		#dano = d1 + d2 + 1
	#elif(a == "POLEN"):
	#	dano = (d1 + d2 + 1)*r
	#elif(a == "FRAQUEZA"):
		#dano = d1 * d2
#print(dano)







-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:08) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = input("rodada: ")

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
	print(a)
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
	dano = d1 + d2 + 1
	print(a)
	print(dano)
elif(d1 + d2 < 5):
	a = "POLEN"
	dano = (d1 + d2 + 1) * r
	print(a)
	print(dano)
else:
	a = "FRAQUEZA"
	dano = d1 * d2
	print(a)
	print(dano)
	#if(a == "CONSTRICAO"):
		#dano = d1 + d2 + 1
	#elif(a == "POLEN"):
	#	dano = (d1 + d2 + 1)*r
	#elif(a == "FRAQUEZA"):
		#dano = d1 * d2
#print(dano)







-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:14) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = input("rodada: ")

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
	print(a)
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
	dano = d1 + d2 + 1
	print(a)
	print(dano)
elif(d1 + d2 < 5):
	a = "POLEN"
	dano = (d1 + d2 + 1) * r
	print(a)
	print(dano)
else:
	a = "FRAQUEZA"
	dano = d1 * d2
	print(a)
	print(dano)
	#if(a == "CONSTRICAO"):
		#dano = d1 + d2 + 1
	#elif(a == "POLEN"):
	#	dano = (d1 + d2 + 1)*r
	#elif(a == "FRAQUEZA"):
		#dano = d1 * d2
#print(dano)







-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:25) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = input("rodada: ")

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
	print(a)
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
	dano = d1 + d2 + 1
	print(a)
	print(dano)
elif(d1 + d2 < 5):
	a = "POLEN"
	dano = (d1 + d2 + 1) * r
	print(a)
	print(dano)
else:
	a = "FRAQUEZA"
	dano = d1 * d2
	print(a)
	print(dano)
	#if(a == "CONSTRICAO"):
		#dano = d1 + d2 + 1
	#elif(a == "POLEN"):
	#	dano = (d1 + d2 + 1)*r
	#elif(a == "FRAQUEZA"):
		#dano = d1 * d2
#print(dano)







-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:21:34) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = input("rodada: ")

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
	print(a)
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
	dano = d1 + d2 + 1
	print(a)
	print(dano)
elif(d1 + d2 < 5):
	a = "POLEN"
	dano = (d1 + d2 + 1) * r
	print(a)
	print(dano)
else:
	a = "FRAQUEZA"
	dano = d1 * d2
	print(a)
	print(dano)
	#if(a == "CONSTRICAO"):
		#dano = d1 + d2 + 1
	#elif(a == "POLEN"):
	#	dano = (d1 + d2 + 1)*r
	#elif(a == "FRAQUEZA"):
		#dano = d1 * d2
#print(dano)







-- EXECUTION TIME:
0.241534
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEN
999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:32:33) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = int(input("rodada: "))

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
	print(a)
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
	dano = d1 + d2 + 1
	print(a)
	print(dano)
elif(d1 + d2 < 5):
	a = "POLEN"
	dano = (d1 + d2 + 1) * r
	print(a)
	print(dano)
else:
	a = "FRAQUEZA"
	dano = d1 * d2
	print(a)
	print(dano)
	#if(a == "CONSTRICAO"):
		#dano = d1 + d2 + 1
	#elif(a == "POLEN"):
	#	dano = (d1 + d2 + 1)*r
	#elif(a == "FRAQUEZA"):
		#dano = d1 * d2
#print(dano)







-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:32:45) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = int(input("rodada: "))

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
	print(a)
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
	dano = d1 + d2 + 1
	print(a)
	print(dano)
elif(d1 + d2 < 5):
	a = "POLEN"
	dano = (d1 + d2 + 1) * r
	print(a)
	print(dano)
else:
	a = "FRAQUEZA"
	dano = d1 * d2
	print(a)
	print(dano)
	#if(a == "CONSTRICAO"):
		#dano = d1 + d2 + 1
	#elif(a == "POLEN"):
	#	dano = (d1 + d2 + 1)*r
	#elif(a == "FRAQUEZA"):
		#dano = d1 * d2
#print(dano)







-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:32:55) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = int(input("rodada: "))

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
	print(a)
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
	dano = d1 + d2 + 1
	print(a)
	print(dano)
elif(d1 + d2 < 5):
	a = "POLEN"
	dano = (d1 + d2 + 1) * r
	print(a)
	print(dano)
else:
	a = "FRAQUEZA"
	dano = d1 * d2
	print(a)
	print(dano)
	#if(a == "CONSTRICAO"):
		#dano = d1 + d2 + 1
	#elif(a == "POLEN"):
	#	dano = (d1 + d2 + 1)*r
	#elif(a == "FRAQUEZA"):
		#dano = d1 * d2
#print(dano)







-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:33:03) 
-- CODE:
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
r = int(input("rodada: "))

if(d1 <= 0 or d1> 6 or d2<=0 or d2>6):
	a = "Entrada invalida"
	print(a)
elif(d1 + d2 == 12):
	a = "CONSTRICAO"
	dano = d1 + d2 + 1
	print(a)
	print(dano)
elif(d1 + d2 < 5):
	a = "POLEN"
	dano = (d1 + d2 + 1) * r
	print(a)
	print(dano)
else:
	a = "FRAQUEZA"
	dano = d1 * d2
	print(a)
	print(dano)
	#if(a == "CONSTRICAO"):
		#dano = d1 + d2 + 1
	#elif(a == "POLEN"):
	#	dano = (d1 + d2 + 1)*r
	#elif(a == "FRAQUEZA"):
		#dano = d1 * d2
#print(dano)







-- EXECUTION TIME:
0.152507
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEN
27
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
